# imessage_exporter_app

./: README.md  next.config.js  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/chat/: page.tsx
components/: DiskAccessDialog.tsx
mocks/: fakeMessages.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: imessage.rs  imessage.test.rs  main.rs
src-tauri/src/app/: options.rs
util/: dataTypes.ts  gatherChats.ts  getDataDir.ts  identifyPlatform.ts  openNewWindow.ts  trimTextPretty.ts
