[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [ "fs-create-dir", "fs-copy-file", "fs-exists", "fs-remove-dir", "path-all", "os-all", "shell-all", "dialog-all", "fs-read-dir", "fs-read-file", "fs-write-file", "window-create"] }
# sqlite = "0.30.4"
imessage-database = "1.4.0"
chrono = "0.4.26"

clap = { version = "4.4.8", features = ["cargo"] }
filetime = "0.2.22"
fs2 = "0.4.3"
indicatif = "0.17.7"
rusqlite = { version = "0.30.0", features = ["blob", "bundled"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
fs_extra = "1.3.0"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
